<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>labvision</groupId>
  <artifactId>labvision</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>labvision</name>
  <url>https://github.com/dmnisson/labvision</url>
  <description>A tool for comparing students' laboratory results in a classroom with accepted or theoretical values, and analyzing error statistics of groups and individuals in groups.</description>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
  	<dependency>
  		<groupId>org.hibernate</groupId>
  		<artifactId>hibernate-entitymanager</artifactId>
  		<version>5.4.4.Final</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.measure</groupId>
  		<artifactId>unit-api</artifactId>
  		<version>1.0</version>
  	</dependency>
  	<dependency>
  	  <groupId>tec.units</groupId>
  	  <artifactId>unit-ri</artifactId>
  	  <version>1.0.3</version>
  	</dependency>
  	<dependency>
	    <groupId>org.hsqldb</groupId>
	    <artifactId>hsqldb</artifactId>
	    <version>2.5.0</version>
    <scope>runtime</scope>
    </dependency>
    <dependency>
	    <groupId>jstl</groupId>
	    <artifactId>jstl</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
	    <groupId>net.sargue</groupId>
	    <artifactId>java-time-jsptags</artifactId>
	    <version>1.1.4</version>
		</dependency>
    <dependency>
    	<groupId>org.hibernate.validator</groupId>
    	<artifactId>hibernate-validator</artifactId>
    	<version>6.0.17.Final</version>
    </dependency>
    <dependency>
    	<groupId>flanagan</groupId>
    	<artifactId>flanagan</artifactId>
    	<version>1.8.0</version>
    </dependency>
    <dependency>
    	<groupId>org.hibernate</groupId>
    	<artifactId>hibernate-jpamodelgen</artifactId>
    	<version>5.4.5.Final</version>
    </dependency>
    <dependency>
    	<groupId>org.mockito</groupId>
    	<artifactId>mockito-core</artifactId>
    	<version>3.0.0</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.junit.jupiter</groupId>
    	<artifactId>junit-jupiter-api</artifactId>
    	<version>5.5.2</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>javax.servlet</groupId>
    	<artifactId>javax.servlet-api</artifactId>
    	<version>3.1.0</version>
    	<scope>provided</scope>
    </dependency>
  </dependencies>
  <packaging>war</packaging>
  <build>
    <plugins>
		  <plugin>
		    <groupId>org.eclipse.jetty</groupId>
		    <artifactId>jetty-maven-plugin</artifactId>
		    <version>9.4.19.v20190610</version>
		    <configuration>
		      <jettyXml>jetty.xml,jetty-ssl-keystore.xml,jetty-ssl.xml,jetty-https.xml</jettyXml>
		      <scanIntervalSeconds>5</scanIntervalSeconds>
		    </configuration>
		  </plugin>
		  <plugin>
		    <groupId>org.codehaus.mojo</groupId>
		    <artifactId>exec-maven-plugin</artifactId>
		    <version>1.6.0</version>
		    <configuration>
		      <executable>java</executable>
		      <arguments>
			      <argument>-classpath</argument>
			      <classpath/>
			      <argument>labvision.utils.InitDatabase</argument>
		      </arguments>
		    </configuration>
		  </plugin>
		  <plugin>
		    <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
		        <source>1.8</source>
		        <target>1.8</target>
		        <compilerArguments>
		            <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
		        </compilerArguments>
		    </configuration>
		  </plugin>
		  <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.22.0</version>
		    <configuration>
		      <trimStackTrace>false</trimStackTrace>
		    </configuration>
		    <dependencies>
		        <dependency>
		            <groupId>org.junit.platform</groupId>
		            <artifactId>junit-platform-surefire-provider</artifactId>
		            <version>1.2.0-M1</version>
		        </dependency>
		        <dependency>
		            <groupId>org.junit.jupiter</groupId>
		            <artifactId>junit-jupiter-engine</artifactId>
		            <version>5.2.0-M1</version>
		        </dependency>
		    </dependencies>
		</plugin>
	  </plugins>
  </build>
</project>